# hybrid-alns

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindCplex.cmake  FindExactcolors.cmake
data/vcp/: example.txt  le450_15a.txt  le450_25c.txt  le450_25d.txt  le_instances.rb
params/: acceptance.json  alns.json  vcp.json
src/: ALNSSolver.cpp  ALNSSolver.h  ALNSSolver.tpp  AcceptanceCriterion.cpp  AcceptanceCriterion.h  Column.h  ColumnOptimiser.h  DRMethod.h  DestroyMethod.cpp  DestroyMethod.h  Instance.cpp  Instance.h  LocalSearchOperator.cpp  LocalSearchOperator.h  Params.cpp  Params.h  PartialSolution.cpp  PartialSolution.h  RepairMethod.cpp  RepairMethod.h  Solution.cpp  Solution.h  SuppressOutput.h  TabuMove.cpp  TabuMove.h  main.cpp
src/acceptance/: WorseAccept.cpp  WorseAccept.h
src/vcp/: Colouring.cpp  Colouring.h  DestroyMethods.cpp  DestroyMethods.h  GreedyColour.cpp  GreedyColour.h  MWSS.cpp  MWSS.h  RepairMethods.cpp  RepairMethods.h  VCColumnOptimiser.cpp  VCColumnOptimiser.h  VCInstance.cpp  VCInstance.h  VCLocalSearch.cpp  VCLocalSearch.h  VCParams.cpp  VCParams.h  VCTabuMove.cpp  VCTabuMove.h
